--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <html>
   <head>
     <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
+    <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
     <link href="index.html">
-    <link href="about.html">
     <link href="contact.html">
     <link href="projects.html">
     <meta charset="utf-8">
@@ -14,12 +15,13 @@
   <body>
     <div class="header">
   <h1>Casey's Portfolio</h1>
-  <p>A <b>portfolio</b> for Casey's work.</p>
-</div>
+       <p>A <b>portfolio</b> for Casey's work.</p>
+    <div class="background-image :img src="bg-1.jpeg;"
+    </div>
 
 <div class="navbar">
   <a href="index.html" class="active">Home</a>
-  <a href="about.html">About Me</a>
+  <a href="about.html">About</a>
   <a href="contact.html">Contacts</a>
   <a href="projects.html">Projects</a>
 </div>
@@ -28,7 +30,7 @@
   <div class="side">
     <h2>About Me</h2>
     <h5>Photo of me:</h5>
-    <img src="images/casey1.jpg"style="height:250px;"></div>
+    <img src="images/bg-4.jpeg"style="height:250px;"></div>
     <p>Here are some things  you'll need to know <a href="about.html">about me</a>.</p>
 
 
@@ -36,14 +38,45 @@
   <div class="main">
     <h2>Family</h2>
     <h5>Family, Dec 7, 2020</h5>
-    <img src="images/fam5.jpg" style="height:200px;"></div>
-    <p>Family</p>
-    <p>An image of my family</p>
+    <img src="images/bg-1.jpeg" style="height:200px;"></div>
+    <p>About Me</p>
+    <div class="about-section">
+  <h1>About Me </h1>
+    <p>This is an about me section.</p>
+    <p> I am a hard working, honest individual. I am a good timekeeper, always willing to learn new skills. I am friendly, helpful and polite, have a good sense of humour. I am able to work independently in busy environments and also within a team setting. I am outgoing and tactful, and able to listen effectively when solving problems.</p>
+
     <br>
-    <h2>Soccer</h2>
-    <h5>Playing soccer, April 15, 2021</h5>
-    <img src="images/ball2.jpg" style="height:200px;"></div>
-    <p>An image of me playing soccer</p>
+    <h2>Contact section</h2>
+    <<div class="container">
+ <div style="text-align:center">
+   <h2>Contact Me</h2>
+   <p>Swing by the DM, or leave me a message on 0702251956.</p>
+ </div>
+ <div class="row">
+   <div class="column">
+     <img src="images/casey1.jpg" style="width:100%">
+   </div>
+   <div class="column">
+     <form action="/action_page.php">
+       <label for="fname">First Name</label>
+       <input type="text" id="fname" name="firstname" placeholder="Your name..">
+       <label for="lname">Last Name</label>
+       <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+       <label for="country">Country</label>
+       <select id="country" name="country">
+         <option value="australia">Kenya</option>
+         <option value="canada">Uganda</option>
+         <option value="usa">Tanzania</option>
+       </select>
+       <label for="subject">Subject</label>
+       <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
+       <input type="submit" value="Submit">
+     </form>
+   </div>
+ </div>
+</div>
+    <p>
+    </p>
   </div>
 </div>
 
