--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <head>
     <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
+    <link href="css/styless.css" rel="stylesheet" type="text/css" media="all">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
     <link href="index.html">
     <link href="contact.html">
@@ -75,10 +76,7 @@
    </div>
  </div>
 </div>
-    <p>
-    </p>
-  </div>
-</div>
+  
 
 <div class="footer">
 
