--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <head>
     <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
-    <link href="css/styless.css" rel="stylesheet" type="text/css" media="all">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
     <link href="index.html">
     <link href="contact.html">
@@ -50,8 +49,7 @@
     <h2>Contact section</h2>
     <<div class="container">
  <div style="text-align:center">
-   <h2>Contact Me</h2>
-   <p>Swing by the DM, or leave me a message on 0702251956.</p>
+   
  </div>
  <div class="row">
    <div class="column">
@@ -76,7 +74,10 @@
    </div>
  </div>
 </div>
-  
+    <p>
+    </p>
+  </div>
+</div>
 
 <div class="footer">
 
