--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
     <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
     <link href="index.html">
     <link href="contact.html">
     <link href="projects.html">
@@ -21,7 +21,7 @@
 
 <div class="navbar">
   <a href="index.html" class="active">Home</a>
-  <a href="about.html">About</a>
+  <a href="#about">About</a>
   <a href="contact.html">Contacts</a>
   <a href="projects.html">Projects</a>
 </div>
@@ -39,8 +39,8 @@
     <h2>Family</h2>
     <h5>Family, Dec 7, 2020</h5>
     <img src="images/bg-1.jpeg" style="height:200px;"></div>
-    
-    <div class="about-section">
+
+    <div id="about" class="about-section">
   <h1>About Me </h1>
     <p>This is an about me section.</p>
     <p> I am a hard working, honest individual. I am a good timekeeper, always willing to learn new skills. I am friendly, helpful and polite, have a good sense of humour. I am able to work independently in busy environments and also within a team setting. I am outgoing and tactful, and able to listen effectively when solving problems.</p>
