Add name change to main file

--- a/port.html
+++ b/port.html
@@ -31,7 +31,7 @@
     <h2>About Me</h2>
     <h5>Photo of me:</h5>
     <img src="images/bg-4.jpeg"style="height:250px;"></div>
-    <p>Here are some things  you'll need to know <a href="about.html">about me</a>.</p>
+    <p>Here are some things  you'll need to know <a href="#about">about me</a>.</p>
 
 
   </div>
@@ -47,7 +47,7 @@
 
     <br>
     <h2>Contact section</h2>
-    <<div class="container">
+    <div class="container">
  <div style="text-align:center">
 
  </div>
